--- a/style.css
+++ b/style.css
@@ -1,13 +1,44 @@
+@font-face { 
+    font-family: 'zabars'; 
+    src: url('fonts/Zabars.ttf') format('truetype'); 
+} 
+
+
+
 button {
     cursor:pointer;
+    font-family: 'zabars', Arial, Helvetica, sans-serif !important;
 }
 
 body {
+    font-family: 'zabars', Arial, Helvetica, sans-serif;
     display:flex;
     flex-direction: column;
     align-items: center;
+    min-height: 100vh;
+    margin: 0;
+    background-image: url('img/10_BG/desert4.png');
+    /* text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5); */
+}
+
+h1{
+    font-size: 64px;
+    letter-spacing: 3px;
 }
 
 canvas {
     background-color: #000;
+    display: block;
+}
+
+@media only screen and (max-width:720px) {
+    canvas {
+        width:100%;
+    }
+}
+
+@media only screen and (max-height:480px) {
+    canvas {
+        height:100vh;
+    }
 }
