--- a/assets.css
+++ b/assets.css
@@ -5,3 +5,11 @@
 .d_none {
     display: none;
 }
+
+.position-absolute{
+    position: absolute;
+}
+
+.position-relative{
+    position: relative;
+}
