--- a/style.css
+++ b/style.css
@@ -30,16 +30,27 @@ h1{
     letter-spacing: 3px;
 }
 
+h2{
+    font-size: 40px;
+}
+
+p{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+}
+
 .start{
     background-image: url('img/10_BG/startscreen_1.jpg');
     background-size: cover;
     top:0;
     left:0;
     width: 720px;
+
     height: 480px;
     display: flex;
     justify-content: center;
-    padding: 30px;
+    padding: 20px 30px;
+    box-sizing: border-box;
 } 
 
 .end{
@@ -56,12 +67,15 @@ canvas {
     display: flex;
     justify-content: center;
     gap:20px;
+    width:100%;
+  
 }
 
 .keyboard-container{
     display: flex;
     flex-direction: column;
     max-width: 720px;
+    min-width: 200px;
     /* width:100%; */
     justify-content: center;
     gap:30px;
@@ -79,7 +93,7 @@ canvas {
 
 }
 
-img {
+.key-img {
     width:100%;
     max-width:50px;
     min-width:20px;
@@ -95,16 +109,123 @@ img {
     max-width:150px;
 }
 
+/*----------------Dialog------------------------*/
+
+dialog::backdrop {
+    background-color: #191b1d00;
+    transition: background-color 0.5s ease-in-out;
+  }
+
+ dialog {
+    width: 100%;
+    max-width: 650px;
+    margin:auto;
+    height: 440px;
+    border: none;
+    border-radius: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0;
+    position: fixed; 
+    background-color: transparent;
+    overflow: auto;
+    transition: all 250ms ease-in-out;
+    -webkit-transition: all 250ms ease-in-out;
+    -moz-transition: all 250ms ease-in-out;
+  }
+
+dialog.bg::backdrop {
+    background-color: #191b1d4a; 
+  } 
+  
+  .dialog-container {
+    width: 100%;
+    height: 100%;
+    background-color:#eec386;
+    overflow: auto;
+  }
+
+  .close-btn {
+    top: 20px;
+    right: 20px;
+    width: 40px;
+    height: 40px;
+    border-radius: 25px;
+    z-index: 6000;
+    font-size: 25px;
+  }
+  .close-btn:hover {
+    background-color: #ff7f17;
+   
+  }
+
+  table{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding: 10px 0;
+  }
+
+  .custom-table {
+    width: 100%;
+    border-collapse: collapse;
+}
+.custom-table td {
+    vertical-align: middle;
+}
+.icons-column {
+    white-space: nowrap;
+    width: 1%;
+    text-align: right;
+    padding-right:20px;
+}
+.icons-column img {
+   width: 40px;
+    height: 40px; 
+    margin-right: 5px;
+    vertical-align: middle;
+    filter: drop-shadow(3px 3px  rgb(0, 0, 0));
+}
+.text-column {
+    width: auto;
+}
+td{
+    height:70px;
+}
+  
+
+/*----------------Scrollbar--------------------*/
+
+dialog::-webkit-scrollbar, .dialog-container::-webkit-scrollbar{
+    width: 12px;               /* width of the entire scrollbar */
+  }
+  
+  dialog::-webkit-scrollbar-track, .dialog-container::-webkit-scrollbar {
+    background: rgb(255, 255, 255);        /* color of the tracking area */
+  }
+  
+  dialog::-webkit-scrollbar-thumb, .dialog-container::-webkit-scrollbar {
+    background-color: #ce5b35;    /* color of the scroll thumb */
+    border-radius: 25px;       /* roundness of the scroll thumb */
+    border: 3px solid rgb(255, 255, 255);  /* creates padding around scroll thumb */
+  }
+
+
+ /*----------------Responsive--------------------*/ 
 
 
 @media only screen and (max-width:720px) {
-    canvas, .start, .end {
+    canvas{
         width:100%;
     }
 }
 
 @media only screen and (max-height:480px) {
-    canvas,.start, .end {
+    canvas{
         height:100vh;
+    }
+}
+
+@media only screen and (max-width:1025px) {
+    .keyboard-container{
+        display:none;
     }
 }
