--- a/assets.css
+++ b/assets.css
@@ -13,3 +13,19 @@
 .position-relative{
     position: relative;
 }
+
+.flex-column {
+    flex-direction: column;
+}
+
+.align-center{
+    align-items: center;
+}
+
+.justify-center {
+    justify-content: center;
+}
+
+.width-100{
+    width: 100%;
+}
