--- a/assets.css
+++ b/assets.css
@@ -26,6 +26,10 @@
     justify-content: center;
 }
 
+.justify-space-between {
+    justify-content: space-between;
+}
+
 .width-100{
     width: 100%;
 }
