--- a/style.css
+++ b/style.css
@@ -3,7 +3,12 @@
     src: url('fonts/Zabars.ttf') format('truetype'); 
 } 
 
-
+html,
+body {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+}
 
 button {
     display: flex;
@@ -12,35 +17,43 @@ button {
     cursor:pointer;
     font-family: 'zabars', Arial, Helvetica, sans-serif;
     border: none;
-    width: 50px;
-    height: 50px;
-    font-size: 40px;
+
+    font-size: 30px;
     background-color: transparent;
 }
 
-/* #toggleSounds img {
-    transition: opacity 0.3s ease-in-out;
-} */
-
 .start-container{
-    gap:80px
+    gap:80px;
+    top: 80px; 
+  left: 50%; 
+  transform: translate(-50%, -50%);
+    z-index:100;
 }
 
 #mobileBtn-container{
     width:100%;
     max-width:720px;
     display:none;
+    bottom: 0px;
 }
 
 #mobileBtn-container button{
-    width:80px;
-    height:80px;
+    width:60px;
+    height:60px;
 }
 
 .btn-container{
     right:10px;
     top:10px;
 }
+
+.btn-container button{
+    width: 50px;
+height: 50px;
+}
+
+
+
 
 body {
     font-family: 'zabars', Arial, Helvetica, sans-serif;
@@ -50,7 +63,6 @@ body {
     min-height: 100vh;
     margin: 0;
     background-image: url('img/10_BG/desert4.png');
-    /* text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.5); */
 }
 
 h1{
@@ -65,30 +77,56 @@ h2{
 p{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: bold;
+    padding:20px;
 }
 
-.start{
-    background-image: url('img/10_BG/startscreen_1.jpg');
-    background-size: cover;
-    top:0;
-    left:0;
-    width: 720px;
-
-    height: 480px;
-    display: flex;
+#orientationMessage {
+    /* position: fixed; */
+    /* top: 0;
+    left: 0; */
+    width: 100%;
+    height: 100vh;
+    display:flex;
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
     justify-content: center;
-    padding: 20px 30px;
+    align-items: center;
+    font-size: 2rem;
+    z-index: 1000;
+    padding: 40px
+  }
+
+.start, .endscreen{
+    width: 100%;
+    border-radius: 10px;
     box-sizing: border-box;
+    overflow: hidden;
 } 
+
+.start img, .endscreen img{
+    width:100%;
+    max-width: 720px;
+    height:auto;
+    display: block;
+}
+
+
+
+
 
 .end{
     background-image: url('img/10_BG/startscreen_1.jpg');
     background-size: cover;
 } 
 
+#fullscreen{
+    display:none;
+}
+
 canvas {
     background-color: #000;
     display: block;
+    border-radius: 10px;
 
 }
 
@@ -243,12 +281,17 @@ dialog::-webkit-scrollbar, .dialog-container::-webkit-scrollbar{
 @media only screen and (max-width:720px) {
     canvas{
         width:100%;
-    }
+    };
+
+   
 }
 
 @media only screen and (max-height:480px) {
-    canvas{
-        height:100vh;
+    h1{
+        display:none;
+    }
+    body {
+        justify-content: center;
     }
 }
 
@@ -256,4 +299,13 @@ dialog::-webkit-scrollbar, .dialog-container::-webkit-scrollbar{
     .keyboard-container{
         display:none;
     }
+   
 }
+
+@media only screen and (max-width:1025px) {
+    .keyboard-container{
+        display:none;
+    }
+   
+}
+
