--- a/style.css
+++ b/style.css
@@ -30,14 +30,6 @@ button {
     z-index:100;
 }
 
-.endscreen-btns{
-    gap:80px;
-   bottom: 10px; 
-   left: 50%; 
-    transform: translate(-50%, -50%);
-    z-index:100;
-}
-
 #mobileBtn-container{
     width:100%;
     max-width:720px;
@@ -89,7 +81,9 @@ p{
 }
 
 #orientationMessage {
-
+    /* position: fixed; */
+    /* top: 0;
+    left: 0; */
     width: 100%;
     height: 100vh;
     display:flex;
@@ -102,7 +96,7 @@ p{
     padding: 40px
   }
 
-.start{
+.start, .endscreen{
     width: 100%;
     border-radius: 10px;
     box-sizing: border-box;
@@ -116,19 +110,7 @@ p{
     display: block;
 }
 
-.endscreen {
-    top:0;
-    right:0;
-   
-    z-index:500;
-}
 
-.menu-btn {
-    padding: 10px 20px;
-    background-color: #ffcc1b;
-    border-radius: 20px;
-    width:150px;
-}
 
 
 
@@ -302,6 +284,12 @@ dialog::-webkit-scrollbar, .dialog-container::-webkit-scrollbar{
     };
 
    
+}
+
+@media only screen and (max-height:480px) {
+    canvas{
+        height:100vh;
+    }
 }
 
 @media only screen and (max-height:480px) {
