--- a/style.css
+++ b/style.css
@@ -6,8 +6,10 @@
 html,
 body {
   width: 100%;
+  height:100%;
   padding: 0;
   margin: 0;
+  overflow: hidden;
 }
 
 button {
@@ -60,8 +62,7 @@ body {
     display:flex;
     flex-direction: column;
     align-items: center;
-    min-height: 100vh;
-    margin: 0;
+  /*   min-height: 100vh; */
     background-image: url('img/10_BG/desert4.png');
 }
 
@@ -81,9 +82,6 @@ p{
 }
 
 #orientationMessage {
-    /* position: fixed; */
-    /* top: 0;
-    left: 0; */
     width: 100%;
     height: 100vh;
     display:flex;
@@ -96,7 +94,7 @@ p{
     padding: 40px
   }
 
-.start, .endscreen{
+.start{
     width: 100%;
     border-radius: 10px;
     box-sizing: border-box;
@@ -110,7 +108,27 @@ p{
     display: block;
 }
 
+.endscreen-btns{
+    gap:80px;
+   bottom: 10px; 
+   left: 50%; 
+    transform: translate(-50%, -50%);
+    z-index:100;
+}
 
+.endscreen {
+    top:0;
+    right:0;
+   
+    z-index:500;
+}
+
+.menu-btn {
+    padding: 10px 20px;
+    background-color: #ffcc1b;
+    border-radius: 20px;
+    width:150px;
+}
 
 
 
