--- a/style.css
+++ b/style.css
@@ -193,6 +193,31 @@ canvas {
     max-width:150px;
 }
 
+
+/* -----------------Loading-Spinner---------------*/
+
+.spinner {
+    display: none; 
+   /*  transform: translate(-50%, -50%); */
+    justify-content: center;
+  }
+  
+  /* Animation  Spinner-img */
+  .spinner-img {
+    width: 100px;
+    height: 100px;
+    animation: spin 2s linear infinite; /* continuous rotation */
+  }
+  
+  @keyframes spin {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
+
 /*----------------Dialog------------------------*/
 
 dialog::backdrop {
