--- a/style.css
+++ b/style.css
@@ -64,6 +64,7 @@ body {
     align-items: center;
   /*   min-height: 100vh; */
     background-image: url('img/10_BG/desert4.png');
+    background-repeat: no-repeat;
 }
 
 h1{
