--- a/style.css
+++ b/style.css
@@ -64,7 +64,9 @@ body {
     align-items: center;
   /*   min-height: 100vh; */
     background-image: url('img/10_BG/desert4.png');
-    background-repeat: no-repeat;
+    background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 h1{
